--- a/my/fbin.html
+++ b/my/fbin.html
@@ -30,5 +30,13 @@
         &nbsp;&nbsp;"done": true<br>
         }<br>
     </p>
+
+    <!-- Hidden images -->
+    <img src="images/1.png" style="display:none" alt="hidden image 1">
+    <img src="images/2.png" style="display:none" alt="hidden image 2">
+    <img src="images/3.png" style="display:none" alt="hidden image 3">
+    <img src="images/4.png" style="display:none" alt="hidden image 4">
+    <img src="images/5.png" style="display:none" alt="hidden image 5">
+
 </body>
 </html>
