--- a/my.html
+++ b/my.html
@@ -4,7 +4,9 @@
     <title></title>
 </head>
 <body>
-    <p>{user:""}</p>
-    <p>{token:""}</p>
+    <p>{</p>
+    <p>&nbsp;"user":,</p>
+    <p>&nbsp;"token":</p>
+    <p>}</p>
 </body>
 </html>
