--- a/my.html
+++ b/my.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <p>{</p>
-    <p>&nbsp;"user": ,</p>
-    <p>&nbsp;"token":</p>
+    <p>&nbsp;"user":"",</p>
+    <p>&nbsp;"token":""</p>
     <p>}</p>
 </body>
 </html>
